k8s/network-policy/backend-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-network-policy
  namespace: jerney

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jerney-frontend

      ports:
        - protocol: TCP
          port: 5000
