k8s/network-policy/db-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: db-network-policy
  namespace: jerney

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-db

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jerney-backend

      ports:
        - protocol: TCP
          port: 5432
